# triton-bazel

./: .bazelrc  .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  LICENSE.txt  MODULE.bazel  Readme.md
libs/util-lib/: BUILD
libs/util-lib/include/: BaseException.hpp  Logger2.hpp  Thing.hpp
libs/util-lib/src/: Logger2.cxx  main.cxx
toolchain/: BUILD  cc_linux_toolchain_config.bzl  cc_osx_toolchain_config.bzl
tools/toolchain/: cc_toolchain_config.bzl
util-lib/: BUILD
util-lib/src/: Thing.cxx  main.cxx
